--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="signup-body">
     <h1>Expense Tracker</h1>
     <div class="form-container">
         <form method="POST" onsubmit="submitHandler(event)">
